feat: 增加多 Agent 协作模式，支持智能难度评估和实时状态感知

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebApp 部署管理</title>
+    <title>WebApp 部署管理 v2.0</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <style>
         * {
@@ -430,8 +430,8 @@
 <body>
     <div id="app">
         <div class="header">
-            <h1>🚀 WebApp 部署管理</h1>
-            <p>快速部署和管理你的 Web 应用</p>
+            <h1>🚀 WebApp 部署管理 <span style="font-size: 0.5em; color: var(--primary);">v2.0</span></h1>
+            <p>多 Agent 异步协作 · 智能难度评估 · 快速部署管理</p>
         </div>
 
         <!-- 错误提示 -->
